--- a/UtopicGaming/src/main/resources/templates/loginRegister.html
+++ b/UtopicGaming/src/main/resources/templates/loginRegister.html
@@ -1,12 +1,3 @@
-
-<!doctype html>
-<html class="no-js" lang="">
-
-<head>
-	<meta charset="utf-8">
-	{{>components/html_head}}
-</head>
-
 <body>
   {{>components/header}}
 
@@ -17,25 +8,25 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-12 mx-auto">
-      <h1>Iniciar SesiÃ³n</h1>
+      <div class="col-6 mx-auto">
+      <h1>Iniciar Sesión</h1>
       
         <form id="login-form" action="" method="POST">
 
           <div class="form-group">
           <div class="row">
-  			<div class="col-sm-6">
+  			<div class="col-sm-4">
   			<label for="login-form_username">Username</label>
             <input type="text" name="username" class="form-control" id="login-form_username" placeholder="Enter Username" required>
             <div class="form-group">
             <label for="login-form_password">Password</label>
             <input type="password"name="password" class="form-control" id="login-form_password" placeholder="Enter Password" required>
-         	</div>
+          </div>
             </div>
           
   			
   			
-  			<div class="col-sm-6">
+  			<div class="col-sm-8">
   			<label for="login-form_username">Username</label>
             <input type="text" name="username" class="form-control" id="login-form_username" placeholder="Enter Username" required>
             <div class="form-group">
@@ -47,9 +38,6 @@
   			</div>
             
   			</div>
-			
-
-
 
           <div class="row">
             <div class="col-6">
