--- a/UtopicGaming/src/main/resources/templates/components/header.html
+++ b/UtopicGaming/src/main/resources/templates/components/header.html
@@ -15,7 +15,7 @@
         <a class="nav-link" href="/merchandising">Merch</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/events">Eventos</a>
+        <a class="nav-link" href="/biblioteca">Biblioteca</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/about-us">Sobre nosotros</a>
@@ -43,10 +43,10 @@
 		{{/logged}}
 		{{^logged}}
 			<li class="nav-item">
-				<a class="btn btn-primary" id="login_button" href="/login">Login</a>
+				<a type="button" class="fas fa-cogs" id="login_button" href="/options"></a>
 			</li>
 			<li class="nav-item">
-				<a class="btn btn-primary" id="register_button" href="/register">Registro</a>
+				<a type="button" class="fas fa-dollar-sign" id="register_button" href="/donations"></a>
 			</li>
 		{{/logged}}
       
