--- a/UtopicGaming/src/main/resources/templates/components/html_head.html
+++ b/UtopicGaming/src/main/resources/templates/components/html_head.html
@@ -11,6 +11,7 @@
 <link rel="stylesheet" href="/assets/css/normalize.css">
 <link rel="stylesheet" href="/assets/css/main.css">
 <link rel="stylesheet" href="/assets/css/style.css">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
   integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
