Login finished except background

--- a/UtopicGaming/src/main/resources/templates/login.html
+++ b/UtopicGaming/src/main/resources/templates/login.html
@@ -15,6 +15,8 @@
 	<div class="row">
       <div class="col-6 mx-auto">
         <img class="mx-auto d-block" src="/assets/img/logo/png/UG.png" alt="Avatar" width="150" height="150">
+        <br>
+        <h6 align="center">¡Bienvenido a la mayor comunidad del mundo gaming</h6>
       </div>
     </div>
     
@@ -29,16 +31,6 @@
   		<h1>Register</h1>
   		<form class="form-horizontal" action="registerUser" method="POST">
   		<div class="form-group">
-
-            <div class="form-group">
-              <label class="register-form_name">Nombre</label>
-              <input type="text" class="form-control" name="firstName" id="register-name" placeholder="Nombre" required>
-            </div>
-
-            <div class="form-group">
-              <label class="register-form_surname">Apellidos</label>
-              <input type="text" class="form-control" name="lastName" id="register-surname" placeholder="Apellidos" required>
-            </div>
 
             <div class="form-group">
               <label class="register-form_username">Username</label>
