--- a/UtopicGaming/src/main/resources/templates/error.html
+++ b/UtopicGaming/src/main/resources/templates/error.html
@@ -10,7 +10,7 @@
   {{>components/header}}
 
 <div id="container404">
-	<img class="img-fluid" id="image404-lcdd" src="assets/img/logo/png/logo_grande.png"/>
+	<img class="img-fluid" id="image404-lcdd" src="assets/img/UG/404.jpg"/>
   <img id="image404" src="assets/img/404.png"/>
   
   <div class="col text-center container-button404">
