--- a/UtopicGaming/src/main/resources/static/assets/css/style.css
+++ b/UtopicGaming/src/main/resources/static/assets/css/style.css
@@ -17,7 +17,7 @@
 h1{
 	font-family: Montserrat-Bold;
 	font-weight: bold;
-	color: #a10600;
+	color: #ffffff;
 }
 h2{
 	font-family: Montserrat-Bold;
@@ -37,7 +37,8 @@ h4{
 h5{
 	font-family: Montserrat-Bold;
 	font-weight: bold;
-	color: #a10600 ;
+	text-align: center;
+	color: #000000 ;
 }
 h6{
 	font-family: Montserrat-Bold;
