--- a/UtopicGaming/src/main/resources/templates/biblioteca.html
+++ b/UtopicGaming/src/main/resources/templates/biblioteca.html
@@ -9,31 +9,581 @@
   {{>components/header}}
 <br>
 <br>
+	
+	<div class="w3-container w3-margin w3-black">
+	  <h1>Tus juegos recientes</h1>
+	</div>
+	
+	<div class="w3-row-padding w3-margin-top">
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png"class="w3-border w3-padding w3-hover-opacity"  style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	  	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	  	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	  	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	  	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	  	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	  	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	  	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
 
-	<div class="w3-panel w3-red">
-  		<p>Juegos de PC</p>
-	</div> 
+	</div>
 	
-	<div class="w3-card-4">
-	  <img src="/assets/img/juegos/minecraft.png" alt="Alps">
-	  <div class="w3-container w3-center">
-	    <p>Minecraft</p>
-	  </div>
-	</div> 
+	<div class="w3-container w3-margin w3-black">
+	  <h1>Tus juegos de PC</h1>
+	</div>
 	
-	<div class="w3-card-4">
-	  <img src="/assets/img/juegos/minecraft.png" alt="Alps">
-	  <div class="w3-container w3-center">
-	    <p>Minecraft</p>
+	<div class="w3-row-padding w3-margin-top">
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
 	  </div>
-	</div> 
-			
-	<div class="w3-card-4">
-	  <img src="/assets/img/juegos/minecraft.png" alt="Alps">
-	  <div class="w3-container w3-center">
-	    <p>Minecraft</p>
+	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png"class="w3-border w3-padding w3-hover-opacity"  style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
 	  </div>
-	</div> 
+	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	  	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	  	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	  	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	  	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	  	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	  	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	  	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	</div>
+	
+	<div class="w3-container w3-margin w3-black">
+	  <h1>Tus juegos de Playstation</h1>
+	</div>
+	
+		<div class="w3-row-padding w3-margin-top">
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png"class="w3-border w3-padding w3-hover-opacity"  style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	  	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	  	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	  	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	  	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	  	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	  	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	  	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+
+	</div>
+	
+	<div class="w3-container w3-margin w3-black">
+	  <h1>Tus juegos de XBOX</h1>
+	</div>
+	
+		<div class="w3-row-padding w3-margin-top">
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png"class="w3-border w3-padding w3-hover-opacity"  style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	  	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	  	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	  	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	  	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	  	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	  	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	  	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+
+	</div>
+
+	<div class="w3-container w3-margin w3-black">
+	  <h1>Tus juegos de Nintendo</h1>
+	</div>
+	
+		<div class="w3-row-padding w3-margin-top">
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png"class="w3-border w3-padding w3-hover-opacity"  style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	  	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	  	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	  	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	  	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	  	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	  	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+	  	
+	  <div class="w3-col m1">
+	    <div class="w3-card">
+	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <div class="w3-container">
+	        <h5 class="w3-center">Minecraft</h5>
+	      </div>
+	    </div>
+	  </div>
+	  
+
+	</div>
+
 <br>
 <br>
 
