--- a/UtopicGaming/src/main/resources/templates/components/header.html
+++ b/UtopicGaming/src/main/resources/templates/components/header.html
@@ -1,56 +1,27 @@
 <nav class="navbar sticky-top navbar-expand-md navbar-dark bg-dark">
-  <a class="navbar-brand" href="/">
-    <img src="/assets/img/logo/png/logo48.png" width="50" height="50" class="d-inline-block align-top">
-  </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu"
-    aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse " id="navbarMenu">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="/">Inicio</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/merchandising">Merch</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/biblioteca">Biblioteca</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/about-us">Sobre nosotros</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/contact">Contacto</a>
-      </li>
-      <li class="nav-item">
-    </ul>
-    
-  
     <ul class="navbar-nav">
-		{{#logged}}
 			<li class="nav-item dropdown">
-				<a class="nav-link dropdown-toggle" id="header_usr_dropdown" role="button" data-toggle="dropdown" href="#">@{{session.username}}<img src="/assets/img/cupula/placeholder_user_man.png" class="rounded-circle" id="header_profile_image" width="50" height="50"></a>
+				<a class="nav-link dropdown-toggle" id="header_usr_dropdown" role="button" data-toggle="dropdown" href="#">Viktor Lopz<img src="/assets/img/cupula/placeholder_user_man.png" class="rounded-circle" id="header_profile_image" width="50" height="50"></a>
 				<div class="dropdown-menu">
-					{{#isAdmin}}
 						<a class="dropdown-item" href="/dashboard">Admin Dashboard</a>
-					{{/isAdmin}}
 					<a class="dropdown-item" href="/profile">Profile</a>
           			<div class="dropdown-divider"></div>
           			<a class="dropdown-item" href="/logOut">Logout</a>
 				</div>
 			</li>
-		{{/logged}}
-		{{^logged}}
-			<li class="nav-item">
-				<a type="button" class="fas fa-cogs" id="login_button" href="/options"></a>
+			<li class="nav item">
+				<a class="navbar-brand" href="/biblioteca">
+			    	<img src="/assets/img/logo/png/logo48.png" width="50" height="50" class="d-inline-block align-center">
+				</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu" aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle navigation">
+			    	<span class="navbar-toggler-icon"></span>
+		  		</button> 
 			</li>
 			<li class="nav-item">
-				<a type="button" class="fas fa-dollar-sign" id="register_button" href="/donations"></a>
+				<a type="button" class="fas fa-dollar-sign" id="login_button" href="/options"></a>
 			</li>
-		{{/logged}}
-      
-      
+			<li class="nav-item">
+				<a type="button" class="fas fa-cogs" id="register_button" href="/donations"></a>
+			</li>    
     </ul>
-  </div>
 </nav>
