browser.js pruebas

--- a/UtopicGaming/src/main/resources/templates/biblioteca.html
+++ b/UtopicGaming/src/main/resources/templates/biblioteca.html
@@ -7,8 +7,6 @@
 
 <body>
   {{>components/header}}
-<br>
-<br>
 	
 	<div class="w3-container w3-margin w3-black">
 	  <h1>Tus juegos recientes</h1>
@@ -230,9 +228,9 @@
 	  	
 	  <div class="w3-col m1">
 	    <div class="w3-card">
-	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <img src="/assets/img/juegos/steam.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
-	        <h5 class="w3-center">Minecraft</h5>
+	        <h5 class="w3-center">Añadir juegos</h5>
 	      </div>
 	    </div>
 	  </div>
@@ -344,9 +342,9 @@
 	  	
 	  <div class="w3-col m1">
 	    <div class="w3-card">
-	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <img src="/assets/img/juegos/play.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
-	        <h5 class="w3-center">Minecraft</h5>
+	        <h5 class="w3-center">Añadir juegos</h5>
 	      </div>
 	    </div>
 	  </div>
@@ -459,9 +457,9 @@
 	  	
 	  <div class="w3-col m1">
 	    <div class="w3-card">
-	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <img src="/assets/img/juegos/xbox.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
-	        <h5 class="w3-center">Minecraft</h5>
+	        <h5 class="w3-center">Añadir Juegos</h5>
 	      </div>
 	    </div>
 	  </div>
@@ -574,9 +572,9 @@
 	  	
 	  <div class="w3-col m1">
 	    <div class="w3-card">
-	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <img src="/assets/img/juegos/ninten.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
-	        <h5 class="w3-center">Minecraft</h5>
+	        <h5 class="w3-center">Añadir Juegos</h5>
 	      </div>
 	    </div>
 	  </div>
