--- a/web_ejer5/src/main/resources/templates/loginRegister.html
+++ b/web_ejer5/src/main/resources/templates/loginRegister.html
@@ -1,8 +1,11 @@
 <!doctype html>
 <html class="no-js" lang="">
+<head>
+	 	<meta charset="UTF-8">
+	 	{{>components/html_head}}
+</head>
 
 <body>
-  {{>components/header}}
 
 <div class="container mt-3 mb-5 big-banner">
 	<div class="bg"></div>
@@ -10,7 +13,7 @@
       <div class="col-6 mx-auto">
         <img class="mx-auto d-block" src="/assets/img/logo/png/UG.png" alt="Avatar" width="150" height="150">
         <br>
-        <h6 align="center">¡Bienvenido a la mayor comunidad del mundo gaming</h6>
+        <h6 align="center">Â¡Bienvenido a la mayor comunidad del mundo gaming</h6>
       </div>
     </div>
     
@@ -37,17 +40,15 @@
             </div>
 
             <div class="form-group">
-              <label class="register-form_password">Contraseña</label>
-              <input type="password" class="form-control" name="passwordHash" id="register-password" placeholder="Contraseña" required>
+              <label class="register-form_password">ContraseÃ±a</label>
+              <input type="password" class="form-control" name="passwordHash" id="register-password" placeholder="ContraseÃ±a" required>
             </div>
 		
             <div class="form-group">
-              <label class="register-form_password">Confirmar contraseña</label>
-              <input type="password" class="form-control" id="password-confirm" placeholder="Confirmar contraseña" required>
+              <label class="register-form_password">Confirmar contraseÃ±a</label>
+              <input type="password" class="form-control" id="password-confirm" placeholder="Confirmar contraseÃ±a" required>
             </div>
  		
- 			<input type="hidden" name="_csrf" value="{{token}}"/>
- 			
             <div class="control-group">
               <div class="controls">
                 <button id="register" class="btn btn-primary">Register</button>
