--- a/web_ejer5/src/main/resources/templates/tablon.html
+++ b/web_ejer5/src/main/resources/templates/tablon.html
@@ -1,15 +1,88 @@
-<html>
+<!doctype html>
+<html class="no-js" lang="">
+
 <body>
-	{{#bienvenida}}
-	<h1>Bienvenido</h1>
-	{{/bienvenida}}
-	
-	<h1>TablÃ³n Anuncios</h1>
-	{{#anuncios}}
-	<a href="/anuncio/{{-index}}">{{nombre}} {{asunto}} </a><br>
-	{{/anuncios}}
-	
-	<br>
-	<a href="/anuncio/nuevo_form">Nuevo anuncio</a>
+  {{>components/header}}
+
+<div class="container mt-3 mb-5 big-banner">
+	<div class="bg"></div>
+	<div class="row">
+      <div class="col-6 mx-auto">
+        <img class="mx-auto d-block" src="/assets/img/logo/png/UG.png" alt="Avatar" width="150" height="150">
+        <br>
+        <h6 align="center">¡Bienvenido a la mayor comunidad del mundo gaming</h6>
+      </div>
+    </div>
+    
+    
+   <div class="col-12 mx-auto">
+
+    <div class="row">
+  		
+  		
+  		
+  		<div class="col-sm-6">
+  		<h1>Register</h1>
+  		<form id="register-form" action="registerUser" method="post">
+  		<div class="form-group">
+
+            <div class="form-group">
+              <label class="register-form_username">Username</label>
+              <input type="text" class="form-control" name="name" id="register-username" placeholder="Username" required>
+            </div>
+
+            <div class="form-group">
+              <label class="register-form_email">E-mail</label>
+              <input type="text" class="form-control" name="email" id="register-email" placeholder="E-mail" required>
+            </div>
+
+            <div class="form-group">
+              <label class="register-form_password">Contraseña</label>
+              <input type="password" class="form-control" name="passwordHash" id="register-password" placeholder="Contraseña" required>
+            </div>
+		
+            <div class="form-group">
+              <label class="register-form_password">Confirmar contraseña</label>
+              <input type="password" class="form-control" id="password-confirm" placeholder="Confirmar contraseña" required>
+            </div>
+ 			
+            <div class="control-group">
+              <div class="controls">
+                <button id="register" class="btn btn-primary">Register</button>
+              </div>
+            </div>
+          </div>
+  		</form>
+        </div>
+          
+
+
+  			
+  		<div class="col-sm-6">
+	  		<form id="login-form" action="loginUser" method="POST">
+	  		<h1>Login</h1>
+		  		<label for="login-form_username">Username</label>
+		        <input type="text" name="username" class="form-control" id="login-form_username" placeholder="Enter Username" required>
+	            <div class="form-group">
+	            	<label for="login-form_password">Password</label>
+	            	<input type="password"name="password" class="form-control" id="login-form_password" placeholder="Enter Password" required>
+	          	</div>
+	         	<button type="submit" class="btn btn-primary" id="login-form_button">Login</button>
+	            <div class="form-check">
+	               	<input class="form-check-input" type="checkbox" value="" id="login-form_remember">
+	                <label class="form-check-label" for="login-form_remember">Remember me</label>
+	            </div>
+	        </form>
+        </div>
+        
+  </div>
+            
+
+	</div>
+</div>
+
+
+  {{>components/footer}}
+
 </body>
 </html>
