--- a/UtopicGaming/src/main/resources/templates/biblioteca.html
+++ b/UtopicGaming/src/main/resources/templates/biblioteca.html
@@ -228,7 +228,7 @@
 	  	
 	  <div class="w3-col m1">
 	    <div class="w3-card">
-	      <img src="/assets/img/juegos/steam.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <img src="/assets/img/juegos/steam.png" onclick="openSteam()" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
 	        <h5 class="w3-center">Añadir juegos</h5>
 	      </div>
@@ -342,7 +342,7 @@
 	  	
 	  <div class="w3-col m1">
 	    <div class="w3-card">
-	      <img src="/assets/img/juegos/play.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <img src="/assets/img/juegos/play.png" onclick="openPlay()"  class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
 	        <h5 class="w3-center">Añadir juegos</h5>
 	      </div>
@@ -457,7 +457,7 @@
 	  	
 	  <div class="w3-col m1">
 	    <div class="w3-card">
-	      <img src="/assets/img/juegos/xbox.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <img src="/assets/img/juegos/xbox.png" onclick="openXbox()" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
 	        <h5 class="w3-center">Añadir Juegos</h5>
 	      </div>
@@ -572,7 +572,7 @@
 	  	
 	  <div class="w3-col m1">
 	    <div class="w3-card">
-	      <img src="/assets/img/juegos/ninten.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <img src="/assets/img/juegos/ninten.png" onclick="openNintendo()" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
 	        <h5 class="w3-center">Añadir Juegos</h5>
 	      </div>
