--- a/UtopicGaming/src/main/resources/templates/components/html_head.html
+++ b/UtopicGaming/src/main/resources/templates/components/html_head.html
@@ -29,6 +29,7 @@
 <script src="https://kit.fontawesome.com/deb22f1091.js" crossorigin="anonymous"></script>
 
 <script src="/assets/js/plugins.js"></script>
+<script src="/assets/js/browser.js"></script>
 <script src="/assets/js/main.js"></script>
 
 <meta name="theme-color" content="#fafafa">
