--- a/web_ejer5/src/main/resources/templates/components/header.html
+++ b/web_ejer5/src/main/resources/templates/components/header.html
@@ -1,9 +1,8 @@
 <nav class="navbar sticky-top navbar-expand-md navbar-dark bg-dark">
     <ul class="navbar-nav">
 			<li class="nav-item dropdown">
-				<a class="nav-link dropdown-toggle" id="header_usr_dropdown" role="button" data-toggle="dropdown" href="#">Viktor Lopz<img src="/assets/img/cupula/placeholder_user_man.png" class="rounded-circle" id="header_profile_image" width="50" height="50"></a>
+				<a class="nav-link dropdown-toggle" id="header_usr_dropdown" role="button" data-toggle="dropdown" href="#">{{session.username}}<img src="/assets/img/cupula/placeholder_user_man.png" class="rounded-circle" id="header_profile_image" width="50" height="50"></a>
 				<div class="dropdown-menu">
-						<a class="dropdown-item" href="/dashboard">Admin Dashboard</a>
 					<a class="dropdown-item" href="/profile">Profile</a>
           			<div class="dropdown-divider"></div>
           			<a class="dropdown-item" href="/logOut">Logout</a>
