--- a/UtopicGaming/src/main/resources/templates/biblioteca.html
+++ b/UtopicGaming/src/main/resources/templates/biblioteca.html
@@ -3,6 +3,7 @@
 	<head>
 	 	<meta charset="UTF-8">
 	 	{{>components/html_head}}
+	 	<script src="/assets/js/browser.js"></script>
 	</head>
 
 <body>
@@ -186,7 +187,7 @@
 	  </div>
 	  
 	  	
-	  <div class="w3-col m1">
+	  <div id="steam1" style="display: none" class="w3-col m1">
 	    <div class="w3-card">
 	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
@@ -196,7 +197,7 @@
 	  </div>
 	  
 	  	
-	  <div class="w3-col m1">
+	  <div id="steam2" style="display: none" class="w3-col m1">
 	    <div class="w3-card">
 	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
@@ -206,7 +207,7 @@
 	  </div>
 	  
 	  	
-	  <div class="w3-col m1">
+	  <div id="steam3" style="display: none" class="w3-col m1">
 	    <div class="w3-card">
 	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
@@ -216,7 +217,7 @@
 	  </div>
 	  
 	  	
-	  <div class="w3-col m1">
+	  <div id="steam4" style="display: none" class="w3-col m1">
 	    <div class="w3-card">
 	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
@@ -300,7 +301,7 @@
 	  </div>
 	  
 	  	
-	  <div class="w3-col m1">
+	  <div id="play1" style="display: none" class="w3-col m1">
 	    <div class="w3-card">
 	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
@@ -310,7 +311,7 @@
 	  </div>
 	  
 	  	
-	  <div class="w3-col m1">
+	  <div id="play2" style="display: none" class="w3-col m1">
 	    <div class="w3-card">
 	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
@@ -320,7 +321,7 @@
 	  </div>
 	  
 	  	
-	  <div class="w3-col m1">
+	  <div id="play3" style="display: none" class="w3-col m1">
 	    <div class="w3-card">
 	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
@@ -329,8 +330,8 @@
 	    </div>
 	  </div>
 	  
-	  	
-	  <div class="w3-col m1">
+
+	  <div id="play4" style="display: none" class="w3-col m1">
 	    <div class="w3-card">
 	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
@@ -415,7 +416,7 @@
 	  </div>
 	  
 	  	
-	  <div class="w3-col m1">
+	  <div id="xbox1" style="display: none"  class="w3-col m1">
 	    <div class="w3-card">
 	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
@@ -425,7 +426,7 @@
 	  </div>
 	  
 	  	
-	  <div class="w3-col m1">
+	  <div id="xbox2" style="display: none" class="w3-col m1">
 	    <div class="w3-card">
 	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
@@ -435,7 +436,7 @@
 	  </div>
 	  
 	  	
-	  <div class="w3-col m1">
+	  <div id="xbox3" style="display: none"  class="w3-col m1">
 	    <div class="w3-card">
 	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
@@ -445,7 +446,7 @@
 	  </div>
 	  
 	  	
-	  <div class="w3-col m1">
+	  <div id="xbox4" style="display: none"  class="w3-col m1">
 	    <div class="w3-card">
 	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
@@ -530,7 +531,7 @@
 	  </div>
 	  
 	  	
-	  <div class="w3-col m1">
+	  <div id="ninte1" style="display: none" class="w3-col m1">
 	    <div class="w3-card">
 	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
@@ -540,7 +541,7 @@
 	  </div>
 	  
 	  	
-	  <div class="w3-col m1">
+	  <div id="ninte2" style="display: none" class="w3-col m1">
 	    <div class="w3-card">
 	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
@@ -550,7 +551,7 @@
 	  </div>
 	  
 	  	
-	  <div class="w3-col m1">
+	  <div id="ninte3" style="display: none" class="w3-col m1">
 	    <div class="w3-card">
 	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
@@ -560,7 +561,7 @@
 	  </div>
 	  
 	  	
-	  <div class="w3-col m1">
+	  <div  id="ninte4" style="display: none"  class="w3-col m1">
 	    <div class="w3-card">
 	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
