added more games

--- a/web_ejer5/src/main/resources/templates/biblioteca.html
+++ b/web_ejer5/src/main/resources/templates/biblioteca.html
@@ -187,7 +187,7 @@
 	  </div>
 	  
 	  	
-	  <div class="w3-col m1">
+	  <div id="steam1" style="display: none" class="w3-col m1">
 	    <div class="w3-card">
 	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
@@ -197,7 +197,7 @@
 	  </div>
 	  
 	  	
-	  <div class="w3-col m1">
+	  <div id="steam2" style="display: none" class="w3-col m1">
 	    <div class="w3-card">
 	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
@@ -207,7 +207,7 @@
 	  </div>
 	  
 	  	
-	  <div class="w3-col m1">
+	  <div id="steam3" style="display: none" class="w3-col m1">
 	    <div class="w3-card">
 	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
@@ -217,7 +217,7 @@
 	  </div>
 	  
 	  	
-	  <div class="w3-col m1">
+	  <div id="steam4" style="display: none" class="w3-col m1">
 	    <div class="w3-card">
 	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
@@ -301,7 +301,7 @@
 	  </div>
 	  
 	  	
-	  <div class="w3-col m1">
+	  <div id="play1" style="display: none" class="w3-col m1">
 	    <div class="w3-card">
 	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
@@ -311,7 +311,7 @@
 	  </div>
 	  
 	  	
-	  <div class="w3-col m1">
+	  <div id="play2" style="display: none" class="w3-col m1">
 	    <div class="w3-card">
 	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
@@ -321,7 +321,7 @@
 	  </div>
 	  
 	  	
-	  <div class="w3-col m1">
+	  <div id="play3" style="display: none" class="w3-col m1">
 	    <div class="w3-card">
 	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
@@ -330,8 +330,8 @@
 	    </div>
 	  </div>
 	  
-	  	
-	  <div class="w3-col m1">
+
+	  <div id="play4" style="display: none" class="w3-col m1">
 	    <div class="w3-card">
 	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
@@ -416,7 +416,7 @@
 	  </div>
 	  
 	  	
-	  <div class="w3-col m1">
+	  <div id="xbox1" style="display: none"  class="w3-col m1">
 	    <div class="w3-card">
 	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
@@ -426,7 +426,7 @@
 	  </div>
 	  
 	  	
-	  <div class="w3-col m1">
+	  <div id="xbox2" style="display: none" class="w3-col m1">
 	    <div class="w3-card">
 	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
@@ -436,7 +436,7 @@
 	  </div>
 	  
 	  	
-	  <div class="w3-col m1">
+	  <div id="xbox3" style="display: none"  class="w3-col m1">
 	    <div class="w3-card">
 	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
@@ -446,7 +446,7 @@
 	  </div>
 	  
 	  	
-	  <div class="w3-col m1">
+	  <div id="xbox4" style="display: none"  class="w3-col m1">
 	    <div class="w3-card">
 	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
@@ -531,7 +531,7 @@
 	  </div>
 	  
 	  	
-	  <div class="w3-col m1">
+	  <div id="ninte1" style="display: none" class="w3-col m1">
 	    <div class="w3-card">
 	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
@@ -541,7 +541,7 @@
 	  </div>
 	  
 	  	
-	  <div class="w3-col m1">
+	  <div id="ninte2" style="display: none" class="w3-col m1">
 	    <div class="w3-card">
 	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
@@ -551,7 +551,7 @@
 	  </div>
 	  
 	  	
-	  <div class="w3-col m1">
+	  <div id="ninte3" style="display: none" class="w3-col m1">
 	    <div class="w3-card">
 	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
@@ -561,7 +561,7 @@
 	  </div>
 	  
 	  	
-	  <div class="w3-col m1">
+	  <div  id="ninte4" style="display: none"  class="w3-col m1">
 	    <div class="w3-card">
 	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
