--- a/UtopicGaming2.0/src/main/resources/templates/components/header.html
+++ b/UtopicGaming2.0/src/main/resources/templates/components/header.html
@@ -5,7 +5,7 @@
 				<div class="dropdown-menu">
 					<a class="dropdown-item" href="/profile">Profile</a>
           			<div class="dropdown-divider"></div>
-          			<a class="dropdown-item" href="/logOut">Logout</a>
+          			<a class="dropdown-item" href="/">Logout</a>
 				</div>
 			</li>
 			<li class="nav item">
