--- a/UtopicGaming2.0/bin/src/main/resources/templates/components/footer.html
+++ b/UtopicGaming2.0/bin/src/main/resources/templates/components/footer.html
@@ -3,24 +3,24 @@
     <div class="row">
       <div class="col-12 text-center">
       <br>
-        <img src="/assets/img/logo/png/UtopiaGaming.png" width="400" height="150">
+        <img src="/assets/img/logo/png/UG.png" width="250" height="125">
       </div>
     </div>
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-5">
         <ul class="list-unstyled list-inline text-center">
           <li class="list-inline-item">
-            <a href="https://www.instagram.com/itsdougthepug/?hl=es" target="_blank" rel="noopener noreferrer"><i
+            <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><i
                 class="fab fa-instagram social_icons"></i></a>
           </li>
-          <li class="list-inline-item"><a href="https://twitter.com/lcdd_urjc" target="_blank"
+          <li class="list-inline-item"><a href="https://twitter.com" target="_blank"
               rel="noopener noreferrer">
               <i class="fab fa-twitter social_icons"></i></a>
           </li>
-          <li class="list-inline-item"><a href="https://discord.gg/yYDsMhw" target="_blank" rel="noopener noreferrer">
-              <i class="fab fa-discord social_icons"></i></a><i>
+          <li class="list-inline-item"><a href="https://discordapp.com/" target="_blank" rel="noopener noreferrer">
+              <i class="fab fa-discord social_icons"></i></a>
           </li>
-          <li class="list-inline-item"><a href="mailto:lcddoficial@gmail.com" target="_blank"
+          <li class="list-inline-item"><a href="https://mail.google.com/" target="_blank"
               rel="noopener noreferrer">
               <i class="fas fa-envelope social_icons"></i></a>
           </li>
