--- a/UtopicGaming2.0/bin/src/main/resources/templates/components/html_head.html
+++ b/UtopicGaming2.0/bin/src/main/resources/templates/components/html_head.html
@@ -4,9 +4,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
-<link rel="icon" href="/assets/img/logo/png/logo16.png" sizes="16x16">
-<link rel="icon" href="/assets/img/logo/png/logo32.png" sizes="32x32">
-<link rel="icon" href="/assets/img/logo/png/logo48.png" sizes="48x48">
+<link rel="icon" href="/assets/img/logo/png/UG.png" sizes="16x16">
+<link rel="icon" href="/assets/img/logo/png/UG.png" sizes="32x32">
+<link rel="icon" href="/assets/img/logo/png/UG.png" sizes="48x48">
 
 <link rel="stylesheet" href="/assets/css/normalize.css">
 <link rel="stylesheet" href="/assets/css/main.css">
