--- a/UtopicGaming2.0/bin/src/main/resources/templates/loginRegister.html
+++ b/UtopicGaming2.0/bin/src/main/resources/templates/loginRegister.html
@@ -11,7 +11,7 @@
 	<div class="bg"></div>
 	<div class="row">
       <div class="col-6 mx-auto">
-        <img class="mx-auto d-block" src="/assets/img/logo/png/UtopiaGaming.png" alt="brand" >
+        <img class="mx-auto d-block" src="/assets/img/logo/png/UG.png" alt="Avatar" width="150" height="150">
         <br>
         <h6 align="center">¡Bienvenido a la mayor comunidad del mundo gaming</h6>
       </div>
@@ -25,23 +25,23 @@
   		
   		
   		<div class="col-sm-6">
-  		<h1>Registro</h1>
+  		<h1>Register</h1>
   		<form id="register-form" action="registerUser" method="post">
   		<div class="form-group">
 
             <div class="form-group">
-              <label class="register-form_username">Nombre de usuario</label>
-              <input type="text" class="form-control" name="name" id="register-username" placeholder="Introducir nombre de usuario" required>
+              <label class="register-form_username">Username</label>
+              <input type="text" class="form-control" name="name" id="register-username" placeholder="Username" required>
             </div>
 
             <div class="form-group">
               <label class="register-form_email">E-mail</label>
-              <input type="text" class="form-control" name="email" id="register-email" placeholder="Introducir e-mail" required>
+              <input type="text" class="form-control" name="email" id="register-email" placeholder="E-mail" required>
             </div>
 
             <div class="form-group">
               <label class="register-form_password">Contraseña</label>
-              <input type="password" class="form-control" name="passwordHash" id="register-password" placeholder="Introducir contraseña" required>
+              <input type="password" class="form-control" name="passwordHash" id="register-password" placeholder="Contraseña" required>
             </div>
 		
             <div class="form-group">
@@ -51,7 +51,7 @@
  		
             <div class="control-group">
               <div class="controls">
-                <button id="register" class="btn btn-primary">Registrarse</button>
+                <button id="register" class="btn btn-primary">Register</button>
               </div>
             </div>
           </div>
@@ -64,16 +64,16 @@
   		<div class="col-sm-6">
 	  		<form id="login-form" action="loginUser" method="POST">
 	  		<h1>Login</h1>
-		  		<label for="login-form_username">Nombre de usuario</label>
-		        <input type="text" name="username" class="form-control" id="login-form_username" placeholder="Introducir nombre de usuario" required>
+		  		<label for="login-form_username">Username</label>
+		        <input type="text" name="username" class="form-control" id="login-form_username" placeholder="Enter Username" required>
 	            <div class="form-group">
-	            	<label for="login-form_password">Contraseña</label>
-	            	<input type="password"name="password" class="form-control" id="login-form_password" placeholder="Introducir contraseña" required>
+	            	<label for="login-form_password">Password</label>
+	            	<input type="password"name="password" class="form-control" id="login-form_password" placeholder="Enter Password" required>
 	          	</div>
-	         	<button type="submit" class="btn btn-primary" id="login-form_button">Loguearse</button>
+	         	<button type="submit" class="btn btn-primary" id="login-form_button">Login</button>
 	            <div class="form-check">
 	               	<input class="form-check-input" type="checkbox" value="" id="login-form_remember">
-	                <label class="form-check-label" for="login-form_remember">Recuerdame</label>
+	                <label class="form-check-label" for="login-form_remember">Remember me</label>
 	            </div>
 	        </form>
         </div>
@@ -83,10 +83,6 @@
 
 	</div>
 </div>
-
-<br>
-<br>
-<br>
 
 
   {{>components/footer}}
