--- a/UtopicGaming2.0/src/main/resources/templates/biblioteca.html
+++ b/UtopicGaming2.0/src/main/resources/templates/biblioteca.html
@@ -169,9 +169,9 @@
 	  	
 	  <div class="w3-col m1">
 	    <div class="w3-card">
-	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <img src="/assets/img/juegos/lol.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%;max-width:400px">
 	      <div class="w3-container">
-	        <h5 class="w3-center">Minecraft</h5>
+	        <h5 class="w3-center">League of Legends</h5>
 	      </div>
 	    </div>
 	  </div>
@@ -179,9 +179,9 @@
 	  	
 	  <div class="w3-col m1">
 	    <div class="w3-card">
-	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <img src="/assets/img/juegos/smite.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
-	        <h5 class="w3-center">Minecraft</h5>
+	        <h5 class="w3-center">Smite</h5>
 	      </div>
 	    </div>
 	  </div>
@@ -189,9 +189,9 @@
 	  	
 	  <div id="steam1" style="display: none" class="w3-col m1">
 	    <div class="w3-card">
-	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <img src="/assets/img/juegos/warframe.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
-	        <h5 class="w3-center">Minecraft</h5>
+	        <h5 class="w3-center">Warframe</h5>
 	      </div>
 	    </div>
 	  </div>
@@ -199,9 +199,9 @@
 	  	
 	  <div id="steam2" style="display: none" class="w3-col m1">
 	    <div class="w3-card">
-	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <img src="/assets/img/juegos/EU4.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
-	        <h5 class="w3-center">Minecraft</h5>
+	        <h5 class="w3-center">Europa Universalis 4</h5>
 	      </div>
 	    </div>
 	  </div>
@@ -209,9 +209,9 @@
 	  	
 	  <div id="steam3" style="display: none" class="w3-col m1">
 	    <div class="w3-card">
-	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <img src="/assets/img/juegos/heart.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
-	        <h5 class="w3-center">Minecraft</h5>
+	        <h5 class="w3-center">Hearthstone</h5>
 	      </div>
 	    </div>
 	  </div>
@@ -283,9 +283,9 @@
 	  	
 	  <div class="w3-col m1">
 	    <div class="w3-card">
-	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <img src="/assets/img/juegos/blood.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
-	        <h5 class="w3-center">Minecraft</h5>
+	        <h5 class="w3-center">Bloodborne</h5>
 	      </div>
 	    </div>
 	  </div>
@@ -293,9 +293,9 @@
 	  	
 	  <div class="w3-col m1">
 	    <div class="w3-card">
-	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <img src="/assets/img/juegos/last.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%;max-height:200px">
 	      <div class="w3-container">
-	        <h5 class="w3-center">Minecraft</h5>
+	        <h5 class="w3-center">The last of Us</h5>
 	      </div>
 	    </div>
 	  </div>
@@ -303,9 +303,9 @@
 	  	
 	  <div id="play1" style="display: none" class="w3-col m1">
 	    <div class="w3-card">
-	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <img src="/assets/img/juegos/dark.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
-	        <h5 class="w3-center">Minecraft</h5>
+	        <h5 class="w3-center">Dark Souls</h5>
 	      </div>
 	    </div>
 	  </div>
@@ -313,9 +313,9 @@
 	  	
 	  <div id="play2" style="display: none" class="w3-col m1">
 	    <div class="w3-card">
-	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <img src="/assets/img/juegos/godwar.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
-	        <h5 class="w3-center">Minecraft</h5>
+	        <h5 class="w3-center">God of War</h5>
 	      </div>
 	    </div>
 	  </div>
@@ -323,9 +323,9 @@
 	  	
 	  <div id="play3" style="display: none" class="w3-col m1">
 	    <div class="w3-card">
-	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <img src="/assets/img/juegos/uncharted.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
-	        <h5 class="w3-center">Minecraft</h5>
+	        <h5 class="w3-center">Uncharted</h5>
 	      </div>
 	    </div>
 	  </div>
@@ -398,9 +398,9 @@
 	  	
 	  <div class="w3-col m1">
 	    <div class="w3-card">
-	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <img src="/assets/img/juegos/gears.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
-	        <h5 class="w3-center">Minecraft</h5>
+	        <h5 class="w3-center">Gears of War</h5>
 	      </div>
 	    </div>
 	  </div>
@@ -408,9 +408,9 @@
 	  	
 	  <div class="w3-col m1">
 	    <div class="w3-card">
-	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <img src="/assets/img/juegos/halo.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
-	        <h5 class="w3-center">Minecraft</h5>
+	        <h5 class="w3-center">Halo</h5>
 	      </div>
 	    </div>
 	  </div>
@@ -418,9 +418,9 @@
 	  	
 	  <div id="xbox1" style="display: none"  class="w3-col m1">
 	    <div class="w3-card">
-	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <img src="/assets/img/juegos/portal.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
-	        <h5 class="w3-center">Minecraft</h5>
+	        <h5 class="w3-center">Portal</h5>
 	      </div>
 	    </div>
 	  </div>
@@ -428,9 +428,9 @@
 	  	
 	  <div id="xbox2" style="display: none" class="w3-col m1">
 	    <div class="w3-card">
-	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <img src="/assets/img/juegos/witcher.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
-	        <h5 class="w3-center">Minecraft</h5>
+	        <h5 class="w3-center">The Witcher 3</h5>
 	      </div>
 	    </div>
 	  </div>
@@ -438,9 +438,9 @@
 	  	
 	  <div id="xbox3" style="display: none"  class="w3-col m1">
 	    <div class="w3-card">
-	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <img src="/assets/img/juegos/borderlands.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
-	        <h5 class="w3-center">Minecraft</h5>
+	        <h5 class="w3-center">Borderlands 2</h5>
 	      </div>
 	    </div>
 	  </div>
@@ -513,9 +513,9 @@
 	  	
 	  <div class="w3-col m1">
 	    <div class="w3-card">
-	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <img src="/assets/img/juegos/ac.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
-	        <h5 class="w3-center">Minecraft</h5>
+	        <h5 class="w3-center">Animal Crossing</h5>
 	      </div>
 	    </div>
 	  </div>
@@ -523,9 +523,9 @@
 	  	
 	  <div class="w3-col m1">
 	    <div class="w3-card">
-	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <img src="/assets/img/juegos/doom.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
-	        <h5 class="w3-center">Minecraft</h5>
+	        <h5 class="w3-center">Doom Eternal</h5>
 	      </div>
 	    </div>
 	  </div>
@@ -533,9 +533,9 @@
 	  	
 	  <div id="ninte1" style="display: none" class="w3-col m1">
 	    <div class="w3-card">
-	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <img src="/assets/img/juegos/mario.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
-	        <h5 class="w3-center">Minecraft</h5>
+	        <h5 class="w3-center">Super Mario</h5>
 	      </div>
 	    </div>
 	  </div>
@@ -543,9 +543,9 @@
 	  	
 	  <div id="ninte2" style="display: none" class="w3-col m1">
 	    <div class="w3-card">
-	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <img src="/assets/img/juegos/tetris.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
-	        <h5 class="w3-center">Minecraft</h5>
+	        <h5 class="w3-center">Tetris</h5>
 	      </div>
 	    </div>
 	  </div>
@@ -553,9 +553,9 @@
 	  	
 	  <div id="ninte3" style="display: none" class="w3-col m1">
 	    <div class="w3-card">
-	      <img src="/assets/img/juegos/minecraft2.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
+	      <img src="/assets/img/juegos/pokemon.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%">
 	      <div class="w3-container">
-	        <h5 class="w3-center">Minecraft</h5>
+	        <h5 class="w3-center">Pokemon</h5>
 	      </div>
 	    </div>
 	  </div>
