--- a/UtopicGaming2.0/src/main/resources/templates/biblioteca.html
+++ b/UtopicGaming2.0/src/main/resources/templates/biblioteca.html
@@ -295,7 +295,7 @@
 	    <div class="w3-card">
 	      <img src="/assets/img/juegos/last.png" class="w3-border w3-padding w3-hover-opacity" style="width:100%;max-height:200px">
 	      <div class="w3-container">
-	        <h5 class="w3-center">The last of Us</h5>
+	        <h5 class="w3-center">The Last of Us</h5>
 	      </div>
 	    </div>
 	  </div>
